# app-Medteko

./: CMakeLists.txt  README.md  main.cpp
QML/: AboutPage.qml  CategoryPage.qml  ExitPage.qml  HomePage.qml  ProductCardPage.qml  ProductListPage.qml  ProfilePage.qml  Styles.qml  SubcategoryPage.qml  TrainingPage.qml  main.qml  qml.qrc
QML/assets/: catalog.json
QML/components/: CustomToolBar.qml
Resource/: resources.qrc
Resource/data/: training.json
core/: CMakeLists.txt  catalogloader.cpp  catalogloader.h  keystore.cpp  keystore.h  productmodel.cpp  productmodel.h  security.cpp  security.h  trainingmodel.cpp  trainingmodel.h
